# Elfo

./: .gitignore  CMakeLists.txt  README.md
include/: elfo.h  elfo_header.h  elfo_section.h
sources/: CMakeLists.txt  elfo.c  elfo_header.c  elfo_section.c
tests/: CMakeLists.txt  elfotest.c
